--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,11 @@
             <artifactId>azure-cosmos</artifactId>
             <version>4.3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
